# PL_dashboard

./: .gitignore  README.md  hello.py  pyproject.toml
dbt/: .user.yml  dbt_project.yml
dbt/models/: _sources.yml
dbt/models/mart/: mart_player_kpi.sql  mart_team_kpi.sql
dbt/models/src/: src_fixtures.sql  src_scorers.sql  src_standings.sql  src_teams.sql
dbt/models/stg/: stg_fixtures.sql  stg_scorers.sql  stg_standings.sql  stg_teams.sql
exploration/: duckfb_test.ipynb
ingestion/: config.py  run_all.py
ingestion/pipelines/: fixtures_pipeline.py  scorers_pipeline.py  standings_pipeline.py  teams_pipeline.py
ingestion/sources/: api_football.py
ingestion/utils/: audit.py  clear_database.py  db_init.py  duckdb_setup.py  logger.py
orchestration/: assets.py  definitions.py
