[project]
name = "pl-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.7",
    "dagster-dbt>=0.28.7",
    "dagster-duckdb>=0.28.7",
    "dagster-webserver>=1.12.7",
    "dbt-core>=1.10.17",
    "dbt-duckdb>=1.10.0",
    "dlt>=1.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
]
